fixed table overflow.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,9 @@ img {
 .space {
   margin: 1em 0;
 }
+
+
+.table {
+  max-width: 1200px !important;
+  table-layout: fixed;
+}
